--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -457,7 +457,9 @@ h4 {
 .welcome__text {
   max-width: 525px;
   margin: 0 0 48px;
+  font-style: normal;
   font-size: 2rem;
+  font-weight: 400;
   line-height: 3.5rem;
 }
 
@@ -479,11 +481,38 @@ h4 {
   border-radius: 10px;
 }
 
+.wrapper__about {
+  display: flex;
+  justify-content: space-between;
+  padding: 93px 109px;
+}
+
+.about__content {
+  max-width: 605px;
+  margin-top: 68px;
+}
+
+.about__title {
+  max-width: 463px;
+  margin: 0 0 40px;
+}
+.about__title .text-selection_orange {
+  color: #E06733;
+}
+
+.about__text {
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 3rem;
+  margin: 0;
+}
+
 .navigation__link:hover {
   transition: all 0.3s ease-out;
 }
 
-body, h1, h3, h4, .button {
+body, h1, h3, h4, .welcome__text, .button, .about__text {
   font-family: "Inter", Verdana, sans-serif;
 }
 
