feat: implement layout service

--- a/plants/sass/_base.scss
+++ b/plants/sass/_base.scss
@@ -62,6 +62,25 @@ h4 {
     margin: 0 auto;
   }
 
+.button {
+    width: 161px;
+    height: 50px;
+    text-align: center;
+    @extend %font-add;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 2.6rem;
+    color: #E06733;
+    border: 1px solid #E06733;
+    border-radius: 5px;
+    cursor: pointer;
+    &:hover {
+        color: #FFFFFF;
+        background: #E06733;
+    }
+}
+
   // Header
 
 .header {
@@ -158,8 +177,9 @@ h4 {
     line-height: 3.5rem;
 }
 
-.button {
-    padding: 10px 26px;
+.button__welcome {
+    width: 158px;
+    height: 44px;
     @extend %font-prim;
     font-style: normal;
     font-weight: 400;
@@ -168,12 +188,9 @@ h4 {
     color: #000000;
     border: 2px solid #E06733;
     border-radius: 10px;
-    cursor: pointer;
     &:hover {
         color: #FFFFFF;
         background: #E06733;
-        border: 2px solid #E06733;
-        border-radius: 10px;
     }
 }
 
@@ -205,4 +222,71 @@ h4 {
     font-style: normal;
     line-height: 3rem;
     margin: 0;
+}
+
+// Service
+
+.service {
+    background-color: #EDF2EC;
+}
+
+.wrapper__service {
+    padding: 40px 109px;
+}
+
+.service__header {
+    display: flex;
+    justify-content: left;
+    margin-bottom: 90px;
+}
+
+.service__title {
+    max-width: 306px;
+    margin: 0 142px 0 0;
+}
+
+.service__buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 29px 0  15px;
+    >* {
+        margin-right: 38px;
+    }
+    &:last-child {
+        margin-right: 0;
+    }
+}
+
+.services {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.service__item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 55px;
+}
+
+.service_descr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #E3E1D5;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.service__image {
+    border-radius: 20px 20px 0px 0px;
+}
+
+.service__name {
+    margin: 10px 0;
+}
+
+.service__text {
+    margin: 0 0 36px;
+    color: #717171;
 }
