--- a/plants/sass/_base.scss
+++ b/plants/sass/_base.scss
@@ -66,7 +66,7 @@ h4 {
     width: 161px;
     height: 50px;
     text-align: center;
-    @extend %font-add;
+    // @extend %font-add;
     font-style: normal;
     font-weight: 400;
     font-size: 2rem;
@@ -75,13 +75,14 @@ h4 {
     border: 1px solid #E06733;
     border-radius: 5px;
     cursor: pointer;
+    @extend %transition;
     &:hover {
         color: #FFFFFF;
         background: #E06733;
     }
 }
 
-  // Header
+ // Header
 
 .header {
     background-color: #EDF2EC;
@@ -186,6 +187,7 @@ h4 {
     font-size: 1.6rem;
     line-height: 2rem;
     color: #000000;
+    background-color: #EDF2EC;
     border: 2px solid #E06733;
     border-radius: 10px;
     &:hover {
@@ -258,6 +260,11 @@ h4 {
     }
 }
 
+.service__button {
+    @extend %font-add;
+    background-color: #EDF2EC;
+}
+
 .services {
     display: flex;
     justify-content: space-between;
@@ -289,4 +296,158 @@ h4 {
 .service__text {
     margin: 0 0 36px;
     color: #717171;
+}
+
+// Prices
+
+.wrapper__prices {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 109px;
+}
+
+.price__title {
+    margin: 0 0 90px;
+    line-height: 48px;
+}
+
+.prices__items {
+    width: 332px;
+    height: 282px;
+    padding: 34px 41px;
+    border: 1px solid #E3E1D5;
+    border-radius: 20px;
+    >* {
+        margin-bottom: 32px;
+    }
+}
+
+.button__price {
+    width: 250px;
+    height: 50px;
+    padding: 0 40px;
+    background: #EDF2EC;
+    @extend %font-prim;
+    font-weight: 700;
+    font-size: 2rem;
+    color: #000000;
+    text-align: left;
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &:hover {
+        color: #000000;
+        background: #D6E7D2;
+    }
+}
+
+.ico {
+    width: 16px;
+    height: 16px;
+    background: #D9D9D9;
+    border-radius: 100%;
+}
+
+.ico-arrow {
+    width: 4px;
+    height: 4px;
+    margin: 5px auto 0;
+    border-top: 0.5px solid #717171;
+    border-right: 0.5px solid #717171;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+// .ico-arrow2 {
+//     width: 4px;
+//     height: 2.35px;
+//     background-image: url("../assets/icons/arrow.svg");
+//     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+// }
+
+.arrow-bottom {
+    transform: rotate(135deg);
+}
+
+.section__call-us {
+    max-width: 452px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.call-us__title {
+    margin: 0 0 38px;
+    text-align: right;
+    .title_selection_green {
+        color: #499A18;
+    }
+}
+
+.button__call-us {
+    margin-bottom: 39px;
+    @extend %font-add;
+    font-weight: 700;
+    background-color: #ffffff;
+}
+
+.call-us__image {
+    width: 152px;
+    height: 175px;
+    margin-bottom: 75px;
+}
+
+// Contacts
+
+.contacts {
+    background-color: #EDF2EC;
+}
+
+.wrapper__contacts {
+    padding: 53px 109px 0 109px;
+    padding-bottom: 27.4%;
+    background-image: url('../assets/images/contact_woman.png');
+    // background-size: 400px 497px;
+    background-position: 109px 53px;
+    background-repeat: no-repeat;
+}
+
+.contacts__title {
+    margin: 7px auto 0;
+    font-weight: 700;
+    text-align: center;
+}
+
+// Footer
+
+.wrapper__footer {
+    padding: 40px 109px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2rem;
+    line-height: 5rem;
+    color: #000000;
+}
+
+.footer-copyright {
+    display: inline-flex;
+    align-items: center;
+    >* {
+        margin-right: 20px;
+    }
+}
+
+.footer-social {
+    display: flex;
+    align-items: center;
+    >* {
+        margin-left: 20px;
+    }
+}
+
+.footer__social-link {
+    display: inline-flex;
 }
