--- a/plants/sass/_base.scss
+++ b/plants/sass/_base.scss
@@ -41,15 +41,6 @@ h2 {
 
 h3 {
     @extend %font-prim;
-    font-size: 4rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 5rem;
-    color: #000000;
-}
-
-h4 {
-    @extend %font-prim;
     font-size: 2rem;
     font-style: normal;
     font-weight: 700;
@@ -119,14 +110,15 @@ h4 {
         color: #000000;
     }
 
-    // &:hover {
+    &:hover {
 
-    //     .logo__text {
-    //         color: #E06733;
-    //         @extend %transition;
-    //     }
+        .logo__text {
+            color: #E06733;
+            text-shadow: 0.5px 0 0 #E06733;
+            @extend %transition;
+        }
 
-    // }
+    }
 
 }
 
@@ -152,16 +144,17 @@ h4 {
         color: #010201;
         text-decoration: none;
 
-        // &:hover {
-        //     font-weight: 700;
-        //     color: #E06733;
-        //     @extend %transition;
-        // }
+        &:hover {
+            // font-weight: 700;
+            color: #E06733;
+            text-shadow: 0.5px 0 0 #E06733;
+            @extend %transition;
+        }
 
     }
 
     .nav_checked {
-        font-weight: 700;
+        text-shadow: 0.5px 0 0 #E06733;
         color: #E06733;
     }
 
@@ -293,10 +286,6 @@ h4 {
             margin-right: 38px;
         }
 
-        // &:last-child {
-        //     margin-right: 0;
-        // }
-
     }
 
     &__btn {
@@ -389,9 +378,21 @@ h4 {
         @extend %font-prim;
     }
 
-    &:hover {
+    &:hover,
+    &:active {
         color: #000000;
-        background: #EDF2EC;
+        background: #D6E7D2;
+
+        .ico {
+            background: #AEA1A1;
+
+            &-arrow_inactive {
+                background-image: url("../assets/icons/arrow_wh.svg");
+                transform: rotate(180deg);
+            }
+
+        }
+
     }
 }
 
@@ -404,33 +405,23 @@ h4 {
     background: #D9D9D9;
     border-radius: 100%;
 
-    &_opened {
+    &_active {
         background: #AEA1A1;
     }
 
-    &-arrow_grey {
+    &-arrow_inactive {
         width: 6px;
         height: 4px;
         background-image: url("../assets/icons/arrow_gr.svg");
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        // width: 4px;
-        // height: 4px;
-        // // margin: 5px auto 0;
-        // border-top: 0.5px solid #717171;
-        // border-right: 0.5px solid #717171;
-        // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
 
-    &-arrow_white {
+    &-arrow_active {
         width: 6px;
         height: 4px;
         background-image: url("../assets/icons/arrow_wh.svg");
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
-
-        // &_bottom {
-        //     transform: rotate(135deg);
-        // }
 
 }
 
@@ -441,11 +432,17 @@ h4 {
     align-items: end;
     background: url("../assets/images/leafs_small.png") right -10px bottom -20px/auto no-repeat;
 
-    &__title {
+    &__text {
         margin: 0 0 39px;
+        @extend %font-prim;
+        font-size: 4rem;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 5rem;
+        color: #000000;
         text-align: right;
 
-        .title_selection_green {
+        .text-selection_green {
             color: #499A18;
         }
 
@@ -490,7 +487,7 @@ h4 {
         align-items: center;
         width: 450px;
         height: 50px;
-        border: 0px;
+        border: 1px solid #D6E7D2;
         border-radius: 0px;
         padding: 0 35px 0 20px;
         background: #D6E7D2;
@@ -505,9 +502,21 @@ h4 {
             @extend %font-prim;
         }
 
-        &:hover {
+        &:hover,
+        &:active {
             color: #717171;
-            background: #D6E7D2;
+            background: #C1E698;
+            border: 1px solid #D6E7D2;
+            border-radius: 0px;
+            box-shadow: none;
+
+            .ico_active {
+                background: #8BA07E;
+            }
+
+            .ico-arrow_active {
+                transform: rotate(180deg);
+            }
         }
 
     }
